service/ec2: Rename aws_local_gateway(s) to aws_ec2_local_gateway(s), use AWS_OUTPOST_ARN environment variable for testing
Output from acceptance testing:

```
--- PASS: TestAccDataSourceAwsEc2LocalGateway_basic (17.79s)

--- PASS: TestAccDataSourceAwsEc2LocalGateways_basic (16.26s)
```

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1110,16 +1110,22 @@
                                     <a href="/docs/providers/aws/d/ebs_volume.html">aws_ebs_volume</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/d/ec2_coip_pool.html">aws_ec2_coip_pool</a>
+                                </li>
+                                <li>
+                                    <a href="/docs/providers/aws/d/ec2_coip_pools.html">aws_ec2_coip_pools</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/d/ec2_instance_type_offering.html">aws_ec2_instance_type_offering</a>
                                 </li>
                                 <li>
                                     <a href="/docs/providers/aws/d/ec2_instance_type_offerings.html">aws_ec2_instance_type_offerings</a>
                                 </li>
                                 <li>
-                                    <a href="/docs/providers/aws/d/ec2_coip_pool.html">aws_ec2_coip_pool</a>
+                                    <a href="/docs/providers/aws/d/ec2_local_gateway.html">aws_ec2_local_gateway</a>
                                 </li>
                                 <li>
-                                    <a href="/docs/providers/aws/d/ec2_coip_pools.html">aws_ec2_coip_pools</a>
+                                    <a href="/docs/providers/aws/d/ec2_local_gateways.html">aws_ec2_local_gateways</a>
                                 </li>
                                 <li>
                                     <a href="/docs/providers/aws/d/ec2_transit_gateway.html">aws_ec2_transit_gateway</a>
@@ -3214,12 +3220,6 @@
                                 </li>
                                 <li>
                                     <a href="/docs/providers/aws/d/internet_gateway.html">aws_internet_gateway</a>
-                                </li>
-                                <li>
-                                    <a href="/docs/providers/aws/d/local_gateway.html">aws_local_gateway</a>
-                                </li>
-                                <li>
-                                    <a href="/docs/providers/aws/d/local_gateways.html">aws_local_gateways</a>
                                 </li>
                                 <li>
                                     <a href="/docs/providers/aws/d/nat_gateway.html">aws_nat_gateway</a>
