Initial commit for ECS default account setting resource

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1316,6 +1316,9 @@
                             <a href="#">Resources</a>
                             <ul class="nav nav-auto-expand">
                                 <li>
+                                    <a href="/docs/providers/aws/r/ecs_default_account_settings.html">aws_ecs_default_account_settings</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/ecs_capacity_provider.html">aws_ecs_capacity_provider</a>
                                 </li>
                                 <li>
