fix missing side navigation links

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1935,6 +1935,9 @@
                                 <li>
                                     <a href="/docs/providers/aws/d/iot_endpoint.html">aws_iot_endpoint</a>
                                 </li>
+                                <li>
+                                    <a href="/docs/providers/aws/d/iot_greengrass_service_role.html">aws_iot_greengrass_service_role</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
@@ -1942,6 +1945,9 @@
                             <ul class="nav nav-auto-expand">
                                 <li>
                                     <a href="/docs/providers/aws/r/iot_certificate.html">aws_iot_certificate</a>
+                                </li>
+                                <li>
+                                    <a href="/docs/providers/aws/r/iot_greengrass_service_role.html">aws_iot_greengrass_service_role</a>
                                 </li>
                                 <li>
                                     <a href="/docs/providers/aws/r/iot_policy.html">aws_iot_policy</a>
