--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1379,6 +1379,9 @@
                                     <a href="/docs/providers/aws/r/efs_file_system.html">aws_efs_file_system</a>
                                 </li>
                                 <li>
+                                    <a href="/docs/providers/aws/r/efs_file_system_policy.html">aws_efs_file_system_policy</a>
+                                </li>
+                                <li>
                                     <a href="/docs/providers/aws/r/efs_mount_target.html">aws_efs_mount_target</a>
                                 </li>
                             </ul>
