Current aws_macie resources interact with Macie Classic.

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2184,7 +2184,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Macie</a>
+                    <a href="#">Macie Classic</a>
                     <ul class="nav">
                         <li>
                             <a href="#">Resources</a>
