Codecommit_approval_rule_assocation resource

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -672,6 +672,9 @@
                                 <li>
                                     <a href="/docs/providers/aws/r/codecommit_trigger.html">aws_codecommit_trigger</a>
                                 </li>
+                                <li>
+                                <a href="/docs/providers/aws/r/codecommit_approval_rule_association.html">aws_codecommit_approval_rule_association</a>
+                            </li>
                             </ul>
                         </li>
                     </ul>
