Documentation for the "resource/ecs_task_set"

--- a/website/aws.erb
+++ b/website/aws.erb
@@ -1354,6 +1354,9 @@
                                 <li>
                                     <a href="/docs/providers/aws/r/ecs_task_definition.html">aws_ecs_task_definition</a>
                                 </li>
+                                <li>
+                                    <a href="/docs/providers/aws/r/ecs_task_set.html">aws_ecs_task_set</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
