--- a/website/aws.erb
+++ b/website/aws.erb
@@ -2240,6 +2240,19 @@
                     </ul>
                 </li>
                 <li>
+                    <a href="#">MediaLive</a>
+                    <ul class="nav">
+                        <li>
+                            <a href="#">Resources</a>
+                            <ul class="nav nav-auto-expand">
+                                <li>
+                                    <a href="/docs/providers/aws/r/medialive_input_security_group.html">aws_medialive_input_security_group</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li>
                     <a href="#">MediaPackage</a>
                     <ul class="nav">
                         <li>
