--- a/internal/generate/tags/templates/v1/header_body.tmpl
+++ b/internal/generate/tags/templates/v1/header_body.tmpl
@@ -30,6 +30,9 @@ import (
 	"github.com/hashicorp/aws-sdk-go-base/v2/awsv1shim/v2/tfawserr"
 	"github.com/hashicorp/terraform-plugin-sdk/v2/helper/resource"
 	{{- end }}
+	{{- if .ConnsPkg }}
+	"github.com/hashicorp/terraform-provider-aws/internal/conns"
+	{{- end }}
 	{{- if .TfResourcePkg }}
     "github.com/hashicorp/terraform-provider-aws/internal/tfresource"
 	{{- end }}
