--- a/internal/generate/tags/templates/v1/get_tag_body.tmpl
+++ b/internal/generate/tags/templates/v1/get_tag_body.tmpl
@@ -4,7 +4,7 @@
 // The identifier is typically the Amazon Resource Name (ARN), although
 // it may also be a different identifier depending on the service.
 {{- if not ( .ContextOnly ) }}
-func {{ .GetTagFunc }}(conn {{ .ClientType }}, identifier string{{ if .TagResTypeElem }}, resourceType string{{ end }}, key string)
+func {{ .GetTagFunc }}(conn {{ .ClientType }}, identifier{{ if .TagResTypeElem }}, resourceType{{ end }}, key string)
 {{- if or ( .TagTypeIDElem ) ( .TagTypeAddBoolElem ) -}}
 (*tftags.TagData, error) {
 {{- else -}}
@@ -13,7 +13,7 @@ func {{ .GetTagFunc }}(conn {{ .ClientType }}, identifier string{{ if .TagResTyp
 	return {{ .GetTagFunc }}WithContext(context.Background(), conn, identifier{{ if .TagResTypeElem }}, resourceType{{ end }}, key)
 }
 {{- end }}
-func {{ if .ContextOnly }}{{ .GetTagFunc }}{{ else }}{{ .GetTagFunc }}WithContext{{ end }}(ctx context.Context, conn {{ .ClientType }}, identifier string{{ if .TagResTypeElem }}, resourceType string{{ end }}, key string)
+func {{ if .ContextOnly }}{{ .GetTagFunc }}{{ else }}{{ .GetTagFunc }}WithContext{{ end }}(ctx context.Context, conn {{ .ClientType }}, identifier{{ if .TagResTypeElem }}, resourceType{{ end }}, key string)
 {{- if or ( .TagTypeIDElem ) ( .TagTypeAddBoolElem ) -}}
 (*tftags.TagData, error) {
 {{- else -}}
