--- a/internal/generate/tags/templates/v2/get_tag_body.tmpl
+++ b/internal/generate/tags/templates/v2/get_tag_body.tmpl
@@ -4,9 +4,9 @@
 // The identifier is typically the Amazon Resource Name (ARN), although
 // it may also be a different identifier depending on the service.
 {{- if or ( .TagTypeIDElem ) ( .TagTypeAddBoolElem ) }}
-func {{ .GetTagFunc }}(ctx context.Context, conn {{ .ClientType }}, identifier string{{ if .TagResTypeElem }}, resourceType string{{ end }}, key string) (*tftags.TagData, error) {
+func {{ .GetTagFunc }}(ctx context.Context, conn {{ .ClientType }}, identifier{{ if .TagResTypeElem }}, resourceType{{ end }}, key string) (*tftags.TagData, error) {
 {{- else }}
-func {{ .GetTagFunc }}(ctx context.Context, conn {{ .ClientType }}, identifier string{{ if .TagResTypeElem }}, resourceType string{{ end }}, key string) (*string, error) {
+func {{ .GetTagFunc }}(ctx context.Context, conn {{ .ClientType }}, identifier{{ if .TagResTypeElem }}, resourceType{{ end }}, key string) (*string, error) {
 {{- end }}
 	{{- if .ListTagsInFiltIDName }}
 	input := &{{ .AWSService  }}.{{ .ListTagsOp }}Input{
