Modify 'servicePackage.ListTags' to set InContext.

--- a/internal/generate/tags/templates/v2/header_body.tmpl
+++ b/internal/generate/tags/templates/v2/header_body.tmpl
@@ -31,4 +31,7 @@ import (
 	{{- if .TfResourcePkg }}
     "github.com/hashicorp/terraform-provider-aws/internal/tfresource"
 	{{- end }}
+	{{- if .TypesPkg }}
+    "github.com/hashicorp/terraform-provider-aws/internal/types"
+	{{- end }}
 )
