--- a/internal/generate/tags/templates/v1/header_body.tmpl
+++ b/internal/generate/tags/templates/v1/header_body.tmpl
@@ -34,4 +34,7 @@ import (
 	{{- if .TfResourcePkg }}
     "github.com/hashicorp/terraform-provider-aws/internal/tfresource"
 	{{- end }}
+	{{- if .TypesPkg }}
+    "github.com/hashicorp/terraform-provider-aws/internal/types"
+	{{- end }}
 )
