--- a/internal/generate/tags/templates/v2/service_tags_slice_body.tmpl
+++ b/internal/generate/tags/templates/v2/service_tags_slice_body.tmpl
@@ -262,7 +262,7 @@ func KeyValueTags(ctx context.Context, tags []awstypes.{{ .TagType }}) tftags.Ke
 // nil is returned if there are no input tags.
 func GetTagsIn(ctx context.Context) []awstypes.{{ .TagType }} {
 	if inContext, ok := tftags.FromContext(ctx); ok {
-		if tags := Tags(inContext.TagsIn); len(tags) > 0 {
+		if tags := Tags(inContext.TagsIn.UnwrapOrDefault()); len(tags) > 0 {
 			return tags
 		}
 	}
