--- a/internal/generate/servicepackages/spd.tmpl
+++ b/internal/generate/servicepackages/spd.tmpl
@@ -21,9 +21,11 @@ func (p *servicePackage) FrameworkDataSources(ctx context.Context) []*types.Serv
 			{{- if ne .Name "" }}
 			Name:    "{{ .Name }}",
 			{{- end }}
-			{{- if ne .TagsIdentifierAttribute "" }}
+			{{- if .TransparentTagging }}
 			Tags: &types.ServicePackageResourceTags {
+				{{- if ne .TagsIdentifierAttribute "" }}
 				IdentifierAttribute: "{{ .TagsIdentifierAttribute }}",
+				{{- end }}
 				{{- if ne .TagsResourceType "" }}
 				ResourceType: "{{ .TagsResourceType }}",
 				{{- end }}
@@ -42,9 +44,11 @@ func (p *servicePackage) FrameworkResources(ctx context.Context) []*types.Servic
 			{{- if ne .Name "" }}
 			Name:    "{{ .Name }}",
 			{{- end }}
-			{{- if ne .TagsIdentifierAttribute "" }}
+			{{- if .TransparentTagging }}
 			Tags: &types.ServicePackageResourceTags {
+				{{- if ne .TagsIdentifierAttribute "" }}
 				IdentifierAttribute: "{{ .TagsIdentifierAttribute }}",
+				{{- end }}
 				{{- if ne .TagsResourceType "" }}
 				ResourceType: "{{ .TagsResourceType }}",
 				{{- end }}
@@ -64,9 +68,11 @@ func (p *servicePackage) SDKDataSources(ctx context.Context) []*types.ServicePac
 			{{- if ne $value.Name "" }}
 			Name:     "{{ $value.Name }}",
 			{{- end }}
-			{{- if ne $value.TagsIdentifierAttribute "" }}
+			{{- if $value.TransparentTagging }}
 			Tags: &types.ServicePackageResourceTags {
+				{{- if ne $value.TagsIdentifierAttribute "" }}
 				IdentifierAttribute: "{{ $value.TagsIdentifierAttribute }}",
+				{{- end }}
 				{{- if ne .TagsResourceType "" }}
 				ResourceType: "{{ .TagsResourceType }}",
 				{{- end }}
@@ -86,9 +92,11 @@ func (p *servicePackage) SDKResources(ctx context.Context) []*types.ServicePacka
 			{{- if ne $value.Name "" }}
 			Name:     "{{ $value.Name }}",
 			{{- end }}
-			{{- if ne $value.TagsIdentifierAttribute "" }}
+			{{- if $value.TransparentTagging }}
 			Tags: &types.ServicePackageResourceTags {
+				{{- if ne $value.TagsIdentifierAttribute "" }}
 				IdentifierAttribute: "{{ $value.TagsIdentifierAttribute }}",
+				{{- end }}
 				{{- if ne .TagsResourceType "" }}
 				ResourceType: "{{ .TagsResourceType }}",
 				{{- end }}
