--- a/internal/generate/tagresource/resource.tmpl
+++ b/internal/generate/tagresource/resource.tmpl
@@ -53,7 +53,7 @@ func resourceTagCreate(ctx context.Context, d *schema.ResourceData, meta interfa
 	value := d.Get("value").(string)
 
 	{{ if eq .ServicePackage "ec2" }}
-	if err := createTags(ctx, conn, identifier, map[string]string{key: value}); err != nil {
+	if err := createTags(ctx, conn, identifier, Tags(tftags.New(ctx, map[string]string{key: value}))); err != nil {
 	{{- else }}
 	if err := {{ .UpdateTagsFunc }}(ctx, conn, identifier, nil, map[string]string{key: value}); err != nil {
 	{{- end }}
