--- a/internal/generate/teamcity/acceptance_tests.tmpl
+++ b/internal/generate/teamcity/acceptance_tests.tmpl
@@ -6,6 +6,12 @@ set -euo pipefail
 
 # shellcheck disable=2157 # This isn't a constant string, it's a TeamCity variable substitution
 if [[ -n "%ACCTEST_ROLE_ARN%" ]]; then
+    echo "assuming role %ACCTEST_ROLE_ARN% for acctests"
+
+    echo "AWS_ACCESS_KEY_ID: $(echo "%AWS_ACCESS_KEY_ID%" | sed -E "s/^.+(.{4})/****\1/")"
+    echo "AWS_SECRET_ACCESS_KEY: $(echo "%AWS_SECRET_ACCESS_KEY%" | sed -E "s/^(.{4}).+(.{4})/\1****\2/")"
+    echo "ACCTEST_ROLE_ARN: %ACCTEST_ROLE_ARN%"
+
     conf=$(pwd)/aws.conf
 
     function cleanup {
@@ -33,25 +39,7 @@ EOF
 fi
 
 TF_ACC=1 go test \
-    ./internal/acctest/... \
-    ./internal/attrmap/... \
-    ./internal/conns/... \
-    ./internal/create/... \
-    ./internal/enum/... \
-    ./internal/envvar/... \
-    ./internal/errs/... \
-    ./internal/experimental/... \
-    ./internal/flex/... \
-    ./internal/framework/... \
-    ./internal/generate/... \
-    ./internal/maps/... \
-    ./internal/provider/... \
-    ./internal/sdktypes/... \
-    ./internal/slices/... \
-    ./internal/sweep/... \
-    ./internal/tags/... \
-    ./internal/tfresource/... \
-    ./internal/types/... \
-    ./internal/vault/... \
-    ./internal/verify/... \
+{{- range . }}
+    ./internal/{{ . }}/... \
+{{- end }}
     -json -v -count=1 -parallel "%ACCTEST_PARALLELISM%" -timeout=0 -run=TestAcc
